--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "minimum-stability": "stable",
     "require": {
         "respect/rest": "^0.6.0",
-        "doctrine/annotations": "^1.2"
+        "doctrine/annotations": "^1.2",
+        "silex/silex": "^1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.3"
